Import of TIMB/DashProfiler-1.08 from CPAN.
gitpan-cpan-distribution: DashProfiler
gitpan-cpan-version:      1.08
gitpan-cpan-path:         TIMB/DashProfiler-1.08.tar.gz
gitpan-cpan-author:       TIMB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -13,6 +13,21 @@ Option to Flush (_if_due) only at period end
 Move DashProfiler::Dump* packages out to modules DashProfiler::DumpTo::*
 Extend DashProfiler::Apache to do handler plumbing for periods?
 
+=head2 DashProfiler 1.08 - r36 - Sept 11 2007
+
+  Fixed fatal error in visit_profile_nodes() for DBI profiles with no Data.
+
+  Changed propagate_period_count() to not reset period_count.
+  Changed to increment period_count in end_sample_period() not start_sample_period().
+  Changed start_sample_period() to not call end_sample_period() automatically.
+    So now multiple start_sample_period() calls without end_sample_period() calls
+    are harmless - the period runs from the most recent start_sample_period() call.
+
+  Added period_strict_start and period_strict_end attributes to control how
+    missing/multiple start_sample_period() & end_sample_period calls are handled.
+    The attributes can be code refs which are called when needed.
+  Added extra_info attribute for use by scripts to carry any extra information.
+
 =head2 DashProfiler 1.07 - r32 - Aug 16 2007
 
   Added DashProfiler::Apache
