Import of TIMB/DashProfiler-1.13 from CPAN.
gitpan-cpan-distribution: DashProfiler
gitpan-cpan-version:      1.13
gitpan-cpan-path:         TIMB/DashProfiler-1.13.tar.gz
gitpan-cpan-author:       TIMB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -18,6 +18,11 @@ Add tests for set_precondition
 
 disabled should set inuse so the check for disabled can be moved inside the 'already inuse' block
 
+=head2 DashProfiler 1.13 - r50 - May 8th 2008
+
+  Changed DashProfiler subs that may be used as Apache handlers
+    to return -1 (DECLINED).
+
 =head2 DashProfiler 1.12 - r48 - Mar 25th 2008
 
   Fixed period_exclusive sample calculation of overheads.
